<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.easytickets.ui.home.HomeFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/resultsMapFragment"
        android:name="com.example.easytickets.ui.results.ResultsMapFragment"
        android:label="@string/results_title" />

    <fragment
        android:id="@+id/eventDetailsFragment"
        android:name="com.example.easytickets.ui.details.EventDetailsFragment"
        android:label="@string/details_title" />

</navigation>
